[tool.poetry]
name = "bsm-example"
version = "0.1.0"
description = ""
authors = ["jlazar17 <jeff.p.lazar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
h5py = "^3.10.0"
scipy = "^1.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
